alteração para a ficha contar quanto de dano foi absorvido

--- a/frmHabilidadeInimigo.lfm
+++ b/frmHabilidadeInimigo.lfm
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <form name="frmHabilidadeInimigo" height="50" theme="dark"> 
 
         <layout align="client" margins="{left=4, right=4, top=4, bottom=4}">
